# anyDB

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmd.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  common.h
src/cli/: CMakeLists.txt  app.cpp
src/server/: CMakeLists.txt  app.cpp  tcp.cpp  tcp.h
